--- a/game-ttt/public/index.html
+++ b/game-ttt/public/index.html
@@ -77,6 +77,7 @@
       <div id="roomPill" class="pill hidden"></div>
     </div>
     <p id="status" class="status">Connecting...</p>
+    <p id="retryWrap" class="status hidden"><button type="button" id="retryBtn" style="margin-top:8px;padding:8px 16px;background:rgba(236,72,153,0.2);border:1px solid rgba(236,72,153,0.4);border-radius:12px;color:#ec4899;font-weight:600;cursor:pointer;">Retry connection</button></p>
     <div id="gameOverActions" class="game-over-actions hidden">
       <button type="button" class="btn-game-over btn-replay">Replay</button>
       <button type="button" class="btn-game-over btn-leave">Leave</button>
@@ -95,9 +96,10 @@
   </div>
 
   <script>
-    const socket = io();
     const params = new URLSearchParams(window.location.search);
     const roomCode = params.get('room') || '';
+    const socketUrlParam = params.get('socketUrl') || params.get('socket') || '';
+    const socket = socketUrlParam.trim() ? io(socketUrlParam.trim(), { transports: ['websocket', 'polling'] }) : io({ transports: ['websocket', 'polling'] });
     const opponentFromUrl = (params.get('opponent') || params.get('opponentName') || '').trim().slice(0, 30);
     const myNameFromUrl = (params.get('name') || params.get('player') || '').trim().slice(0, 30);
     const statusEl = document.getElementById('status');
@@ -108,6 +110,7 @@
     let myName = myNameFromUrl || 'You';
     let opponentName = opponentFromUrl || 'Opponent';
     let state = { board: [], turn: 'X', winner: null };
+    let connectionFailed = false;
 
     function setStatus(text, className = '') {
       statusEl.textContent = text;
@@ -143,7 +146,16 @@
       });
     });
 
+    document.getElementById('retryBtn')?.addEventListener('click', function () {
+      connectionFailed = false;
+      document.getElementById('retryWrap')?.classList.add('hidden');
+      setStatus('Connecting...', '');
+      socket.connect();
+    });
+
     socket.on('connect', () => {
+      connectionFailed = false;
+      document.getElementById('retryWrap')?.classList.add('hidden');
       if (roomCode) {
         roomPill.textContent = 'Room ' + roomCode;
         roomPill.classList.remove('hidden');
@@ -151,6 +163,28 @@
         socket.emit('joinOrCreate', { roomCode, name: 'Player' });
       } else {
         setStatus('Open this page with ?room=YOUR_ROOM_ID (e.g. from the Spill app).');
+      }
+    });
+
+    socket.on('connect_error', (err) => {
+      connectionFailed = true;
+      console.warn('Socket connect_error', err);
+      setStatus('Connection failed. Make sure the game server is running and supports WebSockets, then try again.', 'waiting');
+      boardEl.classList.add('hidden');
+      var rw = document.getElementById('retryWrap');
+      if (rw) rw.classList.remove('hidden');
+    });
+
+    if (socket.io && socket.io.on) {
+      socket.io.on('reconnect_attempt', () => {
+        if (connectionFailed) setStatus('Reconnecting...', '');
+      });
+    }
+
+    socket.on('disconnect', (reason) => {
+      if (reason === 'io server disconnect' || reason === 'io client disconnect') return;
+      if (!connectionFailed && !state.winner) {
+        setStatus('Disconnected. Reconnecting...', 'waiting');
       }
     });
 
