--- a/game-ttt/public/index.html
+++ b/game-ttt/public/index.html
@@ -167,6 +167,8 @@
       state = { board: Array(9).fill(''), turn: 'X', winner: null };
       boardEl.classList.remove('hidden');
       setStatus((state.turn === myRole ? myName : opponentName) + "'s turn");
+      endModal.classList.add('hidden');
+      if (replayPromptModal) replayPromptModal.classList.add('hidden');
     });
 
     socket.on('state', (data) => {
@@ -176,6 +178,16 @@
 
     socket.on('roomFull', () => setStatus('This room is full.'));
     socket.on('opponentLeft', () => setStatus('Opponent left.', 'draw'));
+
+    socket.on('replayRequested', () => {
+      openReplayPromptModal();
+    });
+    socket.on('replayDeclined', () => {
+      closeReplayPromptModal();
+      setStatus('Opponent didn\'t want to play again.', 'draw');
+      endModal.classList.remove('hidden');
+      gameOverActionsEl.classList.remove('hidden');
+    });
 
     // End-game modal (Replay / Leave) — iOS-like alert
     const endModalHtml = `
@@ -193,8 +205,25 @@
           </div>
         </div>
       </div>`;
+    const replayPromptHtml = `
+      <div id="replayPromptModal" class="modal hidden">
+        <div class="iosAlert" role="dialog" aria-modal="true">
+          <div class="iosAlertText">
+            <div class="iosAlertTitle">Play again?</div>
+            <div class="iosAlertBody">Your opponent wants to play another round.</div>
+          </div>
+          <div class="iosAlertDivider"></div>
+          <div class="iosAlertBtns">
+            <button type="button" id="btnReplayAccept" class="iosAlertBtn iosAlertBtnPrimary">Replay</button>
+            <div class="iosAlertBtnSep"></div>
+            <button type="button" id="btnReplayLater" class="iosAlertBtn">Later</button>
+          </div>
+        </div>
+      </div>`;
     document.body.insertAdjacentHTML('beforeend', endModalHtml);
+    document.body.insertAdjacentHTML('beforeend', replayPromptHtml);
     const endModal = document.getElementById('endModal');
+    const replayPromptModal = document.getElementById('replayPromptModal');
     const endTitle = document.getElementById('endTitle');
     const endBody = document.getElementById('endBody');
 
@@ -205,20 +234,43 @@
       gameOverActionsEl.classList.add('hidden');
     }
     function closeEndModal() { endModal.classList.add('hidden'); }
+    function openReplayPromptModal() {
+      replayPromptModal.classList.remove('hidden');
+    }
+    function closeReplayPromptModal() {
+      replayPromptModal.classList.add('hidden');
+    }
 
-    document.getElementById('btnReplay').addEventListener('click', () => window.location.reload());
+    function doReplay() {
+      closeEndModal();
+      closeReplayPromptModal();
+      setStatus('Waiting for opponent to play again...', 'waiting');
+      socket.emit('requestReplay', { roomCode });
+    }
+
+    document.getElementById('btnReplay').addEventListener('click', doReplay);
     document.getElementById('btnLeave').addEventListener('click', () => {
       closeEndModal();
+      closeReplayPromptModal();
       if (window.ReactNativeWebView && typeof window.ReactNativeWebView.postMessage === 'function') {
         window.ReactNativeWebView.postMessage(JSON.stringify({ type: 'leave' }));
       } else {
         window.close();
       }
     });
+    document.getElementById('btnReplayAccept').addEventListener('click', () => {
+      doReplay();
+    });
+    document.getElementById('btnReplayLater').addEventListener('click', () => {
+      closeReplayPromptModal();
+      socket.emit('replayDeclined', { roomCode });
+    });
 
     gameOverActionsEl.addEventListener('click', (e) => {
-      if (e.target.classList.contains('btn-replay')) window.location.reload();
+      if (e.target.classList.contains('btn-replay')) doReplay();
       else if (e.target.classList.contains('btn-leave')) {
+        closeEndModal();
+        closeReplayPromptModal();
         if (window.ReactNativeWebView && typeof window.ReactNativeWebView.postMessage === 'function') {
           window.ReactNativeWebView.postMessage(JSON.stringify({ type: 'leave' }));
         } else {
